<resources>
    <string name="app_name">Movie List</string>
    <string name="poster">poster</string>
    <string name="title">Title</string>
    <string name="language">Language</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="popularity">Popularity</string>
    <string name="release_date">Release Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget">Budget</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="home_page">Home Page</string>
    <string name="revenue">Revenue</string>
    <string name="runtime">Runtime</string>
    <string name="company_name">Company Name</string>
    <string name="company_image">Company Image</string>
    <string name="production_companies">Production Companies</string>
    <string name="search_bar_hint"><font size="15">Please type minimum 2 letter for searching.</font></string>
</resources>