<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/poster" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_toEndOf="@id/poster">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/language"
                android:layout_marginTop="8dp"
                android:text="@string/vote_average"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_average"
                android:layout_marginTop="8dp"
                android:text="@string/vote_count"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_count"
                android:layout_marginTop="8dp"
                android:text="@string/popularity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/popularity"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

</layout>